Fix footer alignment on mobile

--- a/static_site/static/css/main.css
+++ b/static_site/static/css/main.css
@@ -420,10 +420,8 @@ a:hover {
     width: 50px;
     height: 50px;
   }
-  .footer-link-column,
-  .footer-link-column:last-child {
-    padding: 0;
-    width: 49%;
+  .footer-link-column {
+    width: calc(50% - 30px);
   }
   .footer-copyrights,
   .footer-socials {
@@ -432,11 +430,11 @@ a:hover {
   .navbar-inline-menu {
     display: none;
   }
-  .footer-link-column {
-    padding: 0 20px;
+  .footer-link-column:first-child {
+    padding: 0 0 0 30px;
   }
   .footer-link-column:last-child {
-    padding: 0 0 0 20px;
+    padding: 0 30px 0 0;
   }
 
   .hamburger-toggle {
